--- a/.gitignore
+++ b/.gitignore
@@ -143,8 +143,9 @@ venv.bak/
 # Rope project settings
 .ropeproject
 
-# mkdocs documentation
-/site
+# mkdocs documentation (disabled; using Vite app in /site)
+# /site
+/site/dist
 
 # mypy
 .mypy_cache/
@@ -172,3 +173,6 @@ cython_debug/
 
 # PyPI configuration file
 .pypirc
+
+# Node modules
+site/node_modules/*
