--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -19,10 +19,13 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
-        with: { node-version: 20, cache: npm }
+        with:
+          node-version: 20
+          cache: npm
+          cache-dependency-path: site/package-lock.json
       - name: Install deps
         working-directory: site
-        run: npm install
+        run: npm ci
       - name: Build
         working-directory: site
         run: npm run build
